...

                let alert = self.setAlert(title: NSLocalizedString("Error!", comment: ""),
                                          message: NSLocalizedString("""
                                        Only the group admin is able to
                                        edit the reward
                                        """, comment: ""),
                                          actionTitle: "OK")

                self.present(alert, animated: true)

            case .success:
                self.presentDetailRewardViewController(self.reward)
            }
...
        let index = users?.firstIndex { $0.id == currentUser?.id }

        if indexPath.row == index && indexPath.section != 2 {
            return nil
        } else {
            let deleteAction = UIContextualAction(style: .destructive,
                                                  title: "Delete") { [weak self] (_, _, completionHandler) in

                if indexPath.section == 1 {
                    self?.handleMarkAsDelete(user: (self?.users?[indexPath.row])!,
                                             index: indexPath.row,
                                             onComplete: completionHandler)
                } else if indexPath.section == 2 {
...
extension SettingsTableViewController: DangerSettingsCellDelegate {

    func didTapOnDeleteGroup() {
        if currentUser!.isAdmin {
            DatabaseManager.shared.removeAllListeners()

            let alert = self.setAlert(title: NSLocalizedString("Are you sure?", comment: ""),
                                      message: NSLocalizedString("This will erase all data in the group. The action cannot be undone", comment: ""),
                                      actionTitle: NSLocalizedString("Cancel", comment: ""))

            let action = UIAlertAction(title: NSLocalizedString("Delete", comment: ""),
                                       style: .destructive) { _ in
                DatabaseManager.shared.deleteGroup(groupId: DatabaseManager.shared.groupId!) { (result) in
...
            }

            alert.addAction(action)

            self.present(alert, animated: true)
        } else {
            let alert = self.setAlert(title: NSLocalizedString("Attention!", comment: ""),
                                      message: NSLocalizedString("""
                                        Only the admin of the group can delete it
                                        """, comment: ""),
                                      actionTitle: "OK")

            self.present(alert, animated: true)
...
    func didTapOnLeaveGroup() {
        let alert = self.setAlert(title: NSLocalizedString("Are you sure?", comment: ""),
                                  message: NSLocalizedString("You will lose all access to this group. The action cannot be undone",
                                                             comment: ""),
                                  actionTitle: NSLocalizedString("Cancel", comment: ""))

        let action = UIAlertAction(title: NSLocalizedString("Leave", comment: ""),
                                   style: .destructive) { _ in
            DatabaseManager.shared.removeAllListeners()
            DatabaseManager.shared.deleteUser(userId: DatabaseManager.shared.userId!) { (result) in
                switch result {
                case .failure(let err):
                    log.error(err.localizedDescription)
...

        alert.addTextField { (textField) in
            textField.placeholder = self.currentUser?.name
        }

        alert.addAction(UIAlertAction(title: NSLocalizedString("Cancel", comment: ""), style: .cancel, handler: nil))
        alert.addAction(UIAlertAction(title: NSLocalizedString("Save", comment: ""), style: .default, handler: { (_) in
            let newUsername = alert.textFields![0].text
            var updatedUser = self.currentUser

            switch Validations.userName(newUsername!) {
            case .failure(let err):
                log.error(err.localizedDescription)
...
