...
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Continue"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
                                                    <color key="backgroundColor" systemColor="systemRedColor"/>
                                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <state key="normal" title="Delete Group"/>
                                                    <userDefinedRuntimeAttributes>
                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
                                                    <color key="backgroundColor" systemColor="systemRedColor"/>
                                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <state key="normal" title="Leave Group"/>
                                                    <userDefinedRuntimeAttributes>
                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Settings" id="J40-PP-XEs">
                        <barButtonItem key="leftBarButtonItem" title="Share" image="square.and.arrow.up" catalog="system" id="gkj-k7-RGI">
                            <connections>
...
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Checkmark" image="checkmark.circle" catalog="system" id="sHl-tA-wJB">
                                <connections>
                                    <action selector="didTapCheckButton:" destination="pbi-T0-mAe" id="Hlz-2H-blG"/>
...
                            </barButtonItem>
                        </leftBarButtonItems>
                        <barButtonItem key="rightBarButtonItem" title="Add" image="plus" catalog="system" id="eCx-1N-6Hy">
                            <connections>
                                <action selector="didTapAddButton:" destination="pbi-T0-mAe" id="HUA-8V-3eh"/>
...
                                                </constraints>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" title="Select a User"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
                                                <segments>
                                                    <segment title="Low"/>
                                                    <segment title="Medium"/>
                                                    <segment title="High"/>
                                                </segments>
...
                                        </constraints>
                                        <color key="tintColor" name="AccentColor"/>
                                        <state key="normal" title="EUR" image="EUR.png">
                                            <color key="titleColor" systemColor="labelColor"/>
                                        </state>
...
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Create Group"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
                                                </constraints>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" title="Select Period"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
