...
        switch points {
        case Chore.Importance.low.rawValue:
            cell.importanceIndicator.image = UIImage(color: .systemGreen)
            cell.importanceIndicator.accessibilityIdentifier = "Green"
        case Chore.Importance.medium.rawValue:
            cell.importanceIndicator.image = UIImage(color: .systemYellow)
            cell.importanceIndicator.accessibilityIdentifier = "Yellow"
        case Chore.Importance.high.rawValue:
            cell.importanceIndicator.image = UIImage(color: .systemRed)
            cell.importanceIndicator.accessibilityIdentifier = "Red"
        default:
            log.warning("Unknown importance value")
        }
...
