...
            isShowingCompletedChores = false
            checkButton.image = UIImage(systemName: "checkmark.circle")
            navigationItem.title = NSLocalizedString("Chores", comment: "")
        } else {
            isShowingCompletedChores = true
            checkButton.image = UIImage(systemName: "checkmark.circle.fill")
            navigationItem.title = NSLocalizedString("Completed", comment: "")
        }

        fetchData()
    }

    @IBAction func didTapPinButton(_ sender: Any) {
...
